--- a/documents/02_prototype/application/app/index.html
+++ b/documents/02_prototype/application/app/index.html
@@ -11,23 +11,20 @@
         <link rel="stylesheet" href="../public/css/app.css"/>
     </head>
     <body class="bg-steel" ng-app="bettleTrackApp">
-        <div class="app-bar fixed-top navy" ng-include src="'appbar.html'">
+        <div data-role="preloader" data-type="cycle" data-style="color" id="data-preloader"></div>
+        <div class="app-bar fixed-top navy" ng-include src="'appbar.html'" data-role="appbar">
         </div>
 
         <div class="page-content" ng-controller="DashboardController as ctrl">
-            <div class="flex-grid no-responsive-future" style="height: 100%;">
+            <div class="flex-grid" style="height: 100%;">
                 <div class="row" style="height: 100%;max-height: 100%;">
-                    <div class="cell size-x200" id="cell-sidebar" style="background-color: #71b1d1; height: 100%">
+                    <div class="cell size-x200" id="cell-sidebar">
                         <ul class="sidebar">
                             <li>
-                                <a href="" ng-click="ctrl.createDashboard()">
-                                    <span class="title">Create Dashboard</span>
-                                </a>
+                                <a href="" ng-click="ctrl.createDashboard()">Create Dashboard</a>
                             </li>
                             <li ng-class="{true:'active', false:''}[ctrl.currentDashboard.id === dashboard.id]" ng-repeat="dashboard in ctrl.dashboards">
-                                <a href="" ng-click="ctrl.loadDashboard(dashboard)">
-                                    <span class="title">{{dashboard.name}}</span>
-                                </a>
+                                <a href="" ng-click="ctrl.loadDashboard(dashboard)">{{dashboard.name}}</a>
                             </li>
                         </ul>
                     </div>
@@ -51,7 +48,9 @@
             <div class="window-caption bg-white padding10">
                 <span class="window-caption-title cursor-edit" contenteditable="true" ng-blur="ctrl.onTitleBlur($event)">New Dashboard Title</span>
             </div>
-            <div class="window-content" id="dashboard-content"></div>
+            <div class="window-content" id="dashboard-content">
+                
+            </div>
         </div>
         <script type="text/javascript">
             var baseUrl = '../';
