--- a/documents/02_prototype/application/app/test_lab.html
+++ b/documents/02_prototype/application/app/test_lab.html
@@ -11,7 +11,8 @@
         <link rel="stylesheet" href="../public/css/app.css"/>
     </head>
     <body class="bg-steel" ng-app="bettleTrackApp">
-        <div class="app-bar fixed-top navy" ng-include src="'appbar.html'">
+        <div data-role="preloader" data-type="cycle" data-style="color" id="data-preloader"></div>
+        <div class="app-bar fixed-top navy" ng-include src="'appbar.html'" data-role="appbar">
         </div>
 
         <div class="page-content">
@@ -20,9 +21,7 @@
                     <div class="cell size-x200" id="cell-sidebar" style="background-color: #71b1d1; height: 100%">
                         <ul class="sidebar" ng-controller="SidebarController as ctrl">
                             <li ng-repeat="project_info in ctrl.projects"  ng-class="{true:'active', false:''}[project_id == project_info.id]">
-                                <a ui-sref="project({project_id:project_info.id})">
-                                    <span class="title">{{project_info.name}}</span>
-                                </a>
+                                <a ui-sref="project({project_id:project_info.id})">{{project_info.name}}</a>
                             </li>
                         </ul>
                     </div>
