--- a/documents/02_prototype/application/app/tests/lab/testinfo.html
+++ b/documents/02_prototype/application/app/tests/lab/testinfo.html
@@ -1,10 +1,10 @@
-<div class="app-bar darcula">
+<div class="app-bar darcula" style="border: 1px solid #3c3f41;border-bottom-color: #FFFFFF;">
     <ul class="app-bar-menu">
-        <li><a ui-sref="project.testset.details">Details</a></li>
-        <li><a ui-sref="project.testset.execution">Execution</a></li>
-        <li><a ui-sref="project.testset.attachments">Attachments</a></li>
-        <li><a ui-sref="project.testset.issues">Linked Defects</a></li>
-        <li><a ui-sref="project.testset.history">History</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 1]"><a ui-sref="project.testset.details">Details</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 2]"><a ui-sref="project.testset.execution">Execution</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 3]"><a ui-sref="project.testset.attachments">Attachments</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 4]"><a ui-sref="project.testset.issues">Linked Defects</a></li>
+        <li ng-class="{true:'active',false:''}[testMenuItemIndex === 5]"><a ui-sref="project.testset.history">History</a></li>
     </ul>
 </div>
 <div class="example example-less padding10" ui-view="">
